--- a/templates/page.gem-94318559480-template.liquid
+++ b/templates/page.gem-94318559480-template.liquid
@@ -11,8 +11,8 @@
 <link data-instant-track rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" class="gf-style" />
 <link data-instant-track rel="stylesheet" type="text/css" href="https://d1um8515vdn9kb.cloudfront.net/files/vendor.css?refresh=1" class="gf-style" />
 <link data-instant-track rel="stylesheet" type="text/css" href="{{ 'gem-page-94318559480.css' | asset_url }}" class="gf_page_style">
-<link data-instant-track class="gf_fonts" data-fonts="Roboto" href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
-<link data-instant-track class="gf_fonts" data-fonts="Helvetica" href="//fonts.googleapis.com/css?family=Helvetica" rel="stylesheet" type="text/css" />
+<link data-instant-track class="gf_fonts" data-fonts="Roboto" href="//fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900" rel="stylesheet" type="text/css" />
+<link data-instant-track class="gf_fonts" data-fonts="Helvetica" href="//fonts.googleapis.com/css2?family=Helvetica:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900" rel="stylesheet" type="text/css" />
 <link data-instant-track rel="stylesheet" type="text/css" href= "https://d1um8515vdn9kb.cloudfront.net/libs/css/owl.carousel.min.css" class="gf_libs">
 <!--GEM_HEADER_END-->
 {% layout 'theme.gem-layout-none' %} 
